# conf-master

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/conf_master/: __init__.py  conf_master.py  exceptions.py  loaders.py  savers.py  validators.py
src/py_config_manager/: __about__.py  py_config_manager.py
tests/: __init__.py  conftest.py
tests/fixtures/: fixture_data.py
tests/test_conf_master/: test_loaders.py  test_savers.py
