[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-config-manager"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "alvaroroco", email = "alvaroroco@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/alvaroroco/py-config-manager#readme"
Issues = "https://github.com/alvaroroco/py-config-manager/issues"
Source = "https://github.com/alvaroroco/py-config-manager"

[tool.hatch.version]
path = "src/py_config_manager/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_config_manager tests}"

[tool.coverage.run]
source_pkgs = ["py_config_manager", "tests"]
branch = true
parallel = true
omit = [
  "src/py_config_manager/__about__.py",
]

[tool.coverage.paths]
py_config_manager = ["src/py_config_manager", "*/py-config-manager/src/py_config_manager"]
tests = ["tests", "*/py-config-manager/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
