[project]
name = "conf-master"
version = "3.0.0"
description = "A library to manage configuration files"
readme = "README.md"
license = "MIT"
authors = [{ name = "alvaroroco", email = "alvaroroco@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.2", "toml>=0.10.2"]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.4"]


[tool.ruff.lint]
extend-per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
